# geointel-dashboard

./: .gitignore  AGENTS.md  PROJECT GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/components/: FeedsTab.tsx  Header.css  Header.module.css  Header.tsx  MetricsPanel.css  MetricsPanel.module.css  MetricsPanel.tsx  NewsCard.css  NewsCard.module.css  NewsCard.tsx  NewsDetail.css  NewsDetail.tsx  NewsListItem.css  NewsListItem.tsx  NewsPanel.css  NewsPanel.tsx  Settings.css  Settings.module.css  Settings.tsx  Sidebar.css  Sidebar.module.css  Sidebar.tsx  SummaryTicker.css  SummaryTicker.module.css  SummaryTicker.tsx
src/data/: news.ts
src/hooks/: useAppData.ts  useAppData.tsx
src/services/: articleDB.ts  rssService.ts
src/types/: index.ts
