[package]
name = "geopolitical-dashboard"
version = "1.0.0"
description = "Geopolitical Intelligence Dashboard"
authors = ["Developer"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "geopolitical_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
